network-policies/netpol/02-web-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-app
  namespace: front-end
spec:
  podSelector:
    matchLabels:
      run: web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 172.19.0.0/16
      ports:
        - protocol: TCP
          port: 9000
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              tier: back
      ports:
        - protocol: TCP
          port: 9000
