network-policies/netpol/04-ext-netpol.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ext-out-policy
  namespace: back-end
spec:
  podSelector:
    matchLabels:
      run: extsvc
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              tier: front
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
